Update the alignment and remove unmapped reads

--- a/config/snakemake.yml
+++ b/config/snakemake.yml
@@ -3,6 +3,7 @@
 #### ------------------------- Samples ------------------------ ####
 
 samples: config/samples.csv
+primers: config/HKU_primers_positions.csv
 
 #### ------------------------- Genomes ------------------------ ####
 
