--- a/workflow/Snakefile
+++ b/workflow/Snakefile
@@ -18,7 +18,10 @@ samples = sample_df['Run'].unique()
 
 rule all:
     input: 
-        expand(join(config['align_dir'], "{sample}", "{sample}.sorted.bam"), sample=samples)
+        expand(join(config['variant_dir'], "{sample}", "{sample}.varscan.tsv"), sample=["HL-2162"]),
+        expand(join(config['variant_dir'], "{sample}", "{sample}.ivar.tsv"), sample=["HL-2162"]),
+        expand(join(config['variant_dir'], "{sample}", "{sample}.lofreq.tsv"), sample=["HL-2162"])
+        
 
 #### ------------------------ Rules ------------------------ ####
 
@@ -33,4 +36,4 @@ rule clean:
 include: "rules/process-fastq.smk"
 include: "rules/align-fastq.smk"
 # include: "rules/filter-primers.smk"
-# include: "rules/call.variants.smk"
+include: "rules/call-variants.smk"
