--- a/workflow/Snakefile
+++ b/workflow/Snakefile
@@ -18,10 +18,8 @@ samples = sample_df['Run'].unique()
 
 rule all:
     input: 
-        expand(join(config['variant_dir'], "{sample}", "{sample}.varscan.tsv"), sample=["HL-2162"]),
-        expand(join(config['variant_dir'], "{sample}", "{sample}.ivar.tsv"), sample=["HL-2162"]),
-        expand(join(config['variant_dir'], "{sample}", "{sample}.lofreq.tsv"), sample=["HL-2162"])
-        
+        expand(join(config['variant_dir'], "{sample}", "{sample}.variants.tsv"), sample=["HL-2162"]),
+        join(config['coverage_dir'], "merged.depth.tsv")
 
 #### ------------------------ Rules ------------------------ ####
 
@@ -36,4 +34,5 @@ rule clean:
 include: "rules/process-fastq.smk"
 include: "rules/align-fastq.smk"
 # include: "rules/filter-primers.smk"
+include: "rules/calculate-depth.smk"
 include: "rules/call-variants.smk"
