--- a/workflow/Snakefile
+++ b/workflow/Snakefile
@@ -19,7 +19,8 @@ samples = sample_df['Run'].unique()
 rule all:
     input: 
         expand(join(config['variant_dir'], "{sample}", "{sample}.variants.tsv"), sample=["HL-2162"]),
-        join(config['coverage_dir'], "merged.depth.tsv")
+        join(config['coverage_dir'], "merged.depth.tsv"),
+        expand(join(config['align_dir'], "{sample}", "{sample}.masked.sorted.bam"), sample=["HL-2162"])
 
 #### ------------------------ Rules ------------------------ ####
 
@@ -33,6 +34,6 @@ rule clean:
 
 include: "rules/process-fastq.smk"
 include: "rules/align-fastq.smk"
-# include: "rules/filter-primers.smk"
+include: "rules/filter-primers.smk"
 include: "rules/calculate-depth.smk"
 include: "rules/call-variants.smk"
